--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "pkg . --out-path target",
-    "postbuild": "Xcopy /Y /H /E node_modules\\puppeteer\\.local-chromium target\\puppeteer"
+    "build": "pkg . --out-path target --targets win",
+    "postbuild": "copy config.json target\\config.json"
   },
   "pkg": {
     "scripts": "*.js",
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "dateformat": "^3.0.3",
+    "moment-timezone": "^0.5.23",
     "play-sound": "^1.1.3",
     "puppeteer": "^1.14.0"
   }
