--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   "author": "franco.pan",
   "license": "MIT",
   "dependencies": {
-    "dateformat": "^3.0.3",
+    "beepbeep": "^1.2.2",
     "moment-timezone": "^0.5.23",
-    "play-sound": "^1.1.3",
     "puppeteer": "^1.14.0"
   }
 }
